# vanity

./: .gitignore  README.md  astro.config.mjs  biome.json  package.json  plan.md  tsconfig.json  wrangler.jsonc
public/: _headers  robots.txt  site.webmanifest
rust/: Cargo.toml
rust/vanity-bitcoin/: Cargo.toml
rust/vanity-bitcoin/src/: lib.rs
rust/vanity-common/: Cargo.toml
rust/vanity-common/src/: lib.rs
rust/vanity-evm/: Cargo.toml
rust/vanity-evm/src/: lib.rs
rust/vanity-solana/: Cargo.toml
rust/vanity-solana/src/: lib.rs
rust/vanity-substrate/: Cargo.toml
rust/vanity-substrate/src/: lib.rs
rust/vanity-ton/: Cargo.toml
rust/vanity-ton/src/: lib.rs
scripts/: build-wasm.mjs
src/: env.d.ts
src/app/config/: site.ts
src/app/layouts/: base-layout.astro
src/components/: App.tsx  AppProviders.tsx  Header.tsx  SubHeader.tsx  section-blockchain.tsx  section-performance.tsx  section-properties.tsx  section-wallets.tsx
src/components/ui/: button.tsx  card.tsx  connect-button.tsx  copy.tsx  delete.tsx  icons.tsx  input.tsx  progress.tsx  switch.tsx  table.tsx
src/entities/network/model/: networks.ts  types.ts
src/features/vanity-generator/lib/: engine-manager.ts  format.ts  validation.ts
src/features/vanity-generator/model/: types.ts
src/features/vanity-generator/ui/: chain-picker.tsx  results-panel.tsx  vanity-workbench.tsx  (+1 more)
src/hooks/: useWalletStorage.ts  useWorker.ts
src/lib/: constants.ts  context.tsx  wagmi.ts
src/pages/: index.astro
src/shared/seo/: seo.astro
src/shared/styles/: global.css
src/shared/ui/: button.tsx  card.tsx  input.tsx  switch.tsx
src/styles/: global.css
src/utils/: utils.ts
(+11 files in other folders)
