[workspace]
resolver = "2"
members = [
  "vanity-common",
  "vanity-evm",
  "vanity-solana",
  "vanity-bitcoin",
  "vanity-ton",
  "vanity-substrate",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
blake2 = "0.10.6"
bech32 = "0.11.0"
bs58 = { version = "0.5.1", features = ["check"] }
ed25519-dalek = "2.2.0"
getrandom = { version = "0.2.16", features = ["js"] }
k256 = { version = "0.13.4", features = ["arithmetic", "ecdsa", "schnorr"] }
ripemd = "0.1.3"
schnorrkel = "0.11.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.9"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ton-contracts = { version = "0.7.2", default-features = false, features = ["wallet"] }
vanity-common = { path = "./vanity-common" }
wasm-bindgen = "0.2.100"
