[package]
name = "vanity-substrate"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2.workspace = true
bs58.workspace = true
schnorrkel.workspace = true
vanity-common.workspace = true
wasm-bindgen.workspace = true
